endpoints and swagger fetch user, update user
